fix jumping #399 + context menu options when click below .cmd

--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -69,11 +69,10 @@
     overflow-y: auto;
     /* overflow-x: hidden; */
 }
-.terminal, .cmd {
+.terminal {
     contain: content;
 }
 body.terminal {
-    height: 100%;
     min-height: 100vh;
     margin: 0;
 }
